adding Simple Clock to the default apps

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -8,6 +8,7 @@
     <string name="calculator">الحاسبة</string>
     <string name="calendar">التقويم</string>
     <string name="camera">الكاميرا</string>
+    <string name="clock">Clock</string>
     <string name="contacts">Contacts</string>
     <string name="draw">رسم</string>
     <string name="file_manager">مدير الملفات</string>
@@ -21,7 +22,7 @@
     <!-- Short description has to have less than 80 chars -->
     <string name="app_short_description">حافظة بسيطة لإختصارات لتطبيقاتك المفضلة</string>
     <string name="app_long_description">يمكنك و بسهولة إضافة أي اختصار لتشغيل التطبيق، لذلك لن تضطر مرة أخرى إلى السحب خلال تطبيقات عديمة الفائدة للعثور على التطبيق الذي تحتاج إليه. يمكنك أيضا إعادة تسمية الإختصارات كما يحلو لك. انها ليست واجهة كاملة لاستبدال الشاشة الرئيسية الحالية ، وانما هي مجرد درج للتطبيقات المفضلة لديك. لا يحتوي على إعلانات أو أذونات لا حاجة لها. وكذلك مفتوح المصدر ، ويوفر الألوان للتخصيص. هذا التطبيق هو مجرد قطعة واحدة من سلسلة أكبر من التطبيقات. يمكنك العثور على بقيتها هنا\n
- http://www.simplemobiletools.com</string>
+ https://www.simplemobiletools.com</string>
 
     <!--
         Haven't found some strings? There's more at
