--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -3,6 +3,7 @@
     <string name="app_launcher_name">Pokretač aplikacija</string>
     <string name="enter_launcher_name">Unesite naziv pokretača</string>
     <string name="remove_explanation">To će ukloniti ikonu pokretača samo iz mreže, ali ne i deinstalirati aplikaciju.</string>
+    <string name="close_app">Close this app at launching a different one</string>
 
     <!-- Apps -->
     <string name="calculator">Kalkulator</string>
