--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -3,6 +3,7 @@
     <string name="app_launcher_name">Launcher Aplikacji</string>
     <string name="enter_launcher_name">Proszę wpisać nazwę launchera</string>
     <string name="remove_explanation">This will just remove the launcher icon from this grid, not uninstall the actual app.</string>
+    <string name="close_app">Close this app at launching a different one</string>
 
     <!-- Apps -->
     <string name="calculator">Kalkulator</string>
