--- a/app/src/main/res/values-az/strings.xml
+++ b/app/src/main/res/values-az/strings.xml
@@ -12,9 +12,9 @@
     <string name="clock">Saat</string>
     <string name="contacts">Kontaktlar</string>
     <string name="draw">Çək</string>
-    <string name="file_manager">Fayl Menecer</string>
+    <string name="file_manager">Fayl Meneceri</string>
     <string name="flashlight">Fənər</string>
-    <string name="gallery">Qaleriya</string>
+    <string name="gallery">Qalereya</string>
     <string name="music_player">Musiqi Çalar</string>
     <string name="notes">Qeydlər</string>
     <string name="thank_you">Təşəkkürlər</string>
