Improve italian translation

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Simple App Launcher</string>
+    <string name="app_name">Semplice Lanciatore di Applicazioni</string>
     <string name="app_launcher_name">Lanciatore di applicazioni</string>
     <string name="enter_launcher_name">Inserire il nome di un lanciatore</string>
     <string name="remove_explanation">Questo rimuoverà solamente l\'icona del lanciatore dalla griglia, non disintallerà l\'applicazione.</string>
@@ -11,23 +11,23 @@
     <string name="camera">Fotocamera</string>
     <string name="clock">Orologio</string>
     <string name="contacts">Contatti</string>
-    <string name="draw">Draw</string>
+    <string name="draw">Disegna</string>
     <string name="file_manager">Gestore dei file</string>
     <string name="flashlight">Torcia</string>
     <string name="gallery">Galleria</string>
     <string name="music_player">Riproduttore musicale</string>
     <string name="notes">Note</string>
-    <string name="thank_you">Grazie</string>
+    <string name="thank_you">Ringraziamento</string>
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- Short description has to have less than 80 chars -->
-    <string name="app_short_description">Un semplice contenitore per i tuoi lanciatori di applicazioni preferite.</string>
+    <string name="app_short_description">Un semplice contenitore per i propri lanciatori preferiti.</string>
     <string name="app_long_description">
-        Puoi in maniera semplice aggiungere qualsiasi lanciatore di applicazione, così da non cercare fra applicazioni inutili per trovare quella che ti serve. Puoi inoltre rinominare i lanciatori come vuoi. Non rimpiazza realmente la tua schermata principale, è solamente un contenitore per le tue applicazioni preferite.
-        
-        Non contiene pubblicità o permessi non necessari. È completamente opensource, fornisce colori personalizzabili.
+        Si può in maniera semplice aggiungere qualsiasi lanciatore di applicazione, così da non cercare fra le varie applicazioni inutili per trovare quella che necessaria. Si possono inoltre rinominare i lanciatori e questa app non rimpiazza realmente la schermata principale, è solamente un contenitore per le applicazioni preferite.
 
-        Questa applicazione è solamente una di una serie più grande. Puoi trovare le altre su https://www.simplemobiletools.com
+        L\'applicazione non contiene pubblicità o permessi non necessari; è completamente opensource e la si può personalizzare con i propri colori preferiti.
+
+        Questa è solamente una delle tante applicazioni della serie Simple Mobile Tools. Si possono trovare le altre su https://www.simplemobiletools.com
     </string>
 
     <!--
