Ukrainian, update strings.xml
Minor translation improvements

--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">Простий Лаунчер</string>
     <string name="app_launcher_name">Лаунчер</string>
-    <string name="enter_launcher_name">Будь-ласка, введіть назву лаунчера</string>
-    <string name="remove_explanation">Це лише видалить значок лаунчера з цієї сітки, не деінсталює сам додаток.</string>
+    <string name="enter_launcher_name">Будь-ласка, введіть назву запускача</string>
+    <string name="remove_explanation">Це лише видалить значок запускача з цієї сітки, не деінсталює сам додаток.</string>
     <string name="close_app">Закрити цей додаток при запуску іншого</string>
 
     <!-- Apps -->
@@ -21,9 +21,9 @@
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- Short description has to have less than 80 chars -->
-    <string name="app_short_description">Простий додаток, що об'єднує всі твої улюблені додатки в одному місці.</string>
+    <string name="app_short_description">Простий додаток, що об\'єднує всі твої улюблені додатки в одному місці.</string>
     <string name="app_long_description">
-        Ти можеш легко додати лаунчер будь-якого додатка, тому тобі більше не доведеться гортати численні сторінки, щоб знайти те, що шукаєш. Ти також можеш перейменувати лаунчери, якщо забажаєш. Це не є типовий лаунчер, що замінює домашній екран, він просто об'єднує твої улюблені додатки.
+        Ти можеш легко додати запускач будь-якого додатка, тому тобі більше не доведеться гортати численні сторінки, щоб знайти те, що шукаєш. Ти також можеш перейменувати запускачі, якщо забажаєш. Це не є типовий додаток-оболонка, що замінює домашній екран, він просто об\'єднує твої улюблені додатки.
 
         Цей додаток не буде показувати рекламу; потрібні лише найнеобхідніші дозволи. Додаток має повністю відкритий програмний код, кольори оформлення можна легко налаштувати.
 
