--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -20,6 +20,8 @@
     <string name="thank_you">شكرا لك</string>
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
+    <!-- App title has to have less than 50 characters. If you cannot squeeze it, just remove a part of it -->
+    <string name="app_title">Simple App Launcher - Find your apps quickly</string>
     <!-- Short description has to have less than 80 chars -->
     <string name="app_short_description">حافظة بسيطة لإختصارات لتطبيقاتك المفضلة</string>
     <string name="app_long_description">يمكنك و بسهولة إضافة أي اختصار لتشغيل التطبيق، لذلك لن تضطر مرة أخرى إلى السحب خلال تطبيقات عديمة الفائدة للعثور على التطبيق الذي تحتاج إليه. يمكنك أيضا إعادة تسمية الإختصارات كما يحلو لك. انها ليست واجهة كاملة لاستبدال الشاشة الرئيسية الحالية ، وانما هي مجرد درج للتطبيقات المفضلة لديك. لا يحتوي على إعلانات أو أذونات لا حاجة لها. وكذلك مفتوح المصدر ، ويوفر الألوان للتخصيص. هذا التطبيق هو مجرد قطعة واحدة من سلسلة أكبر من التطبيقات. يمكنك العثور على بقيتها هنا\n
