--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Eenvoudige App Launcher</string>
     <string name="app_launcher_name">App Launcher</string>
     <string name="enter_launcher_name">Voer een naam voor de snelkoppeling in</string>
-    <string name="remove_explanation">Hiermee wordt alleen het icoon uit dit overzicht verwijderd, de app zelf blijft geïnstalleerd.</string>
+    <string name="remove_explanation">Hiermee wordt alleen het icoon uit dit overzicht verwijderd, de app zelf blijft geï¿½nstalleerd.</string>
     <string name="close_app">Deze app sluiten bij het starten van een andere app</string>
 
     <!-- Apps -->
@@ -20,6 +20,8 @@
     <string name="thank_you">Thank You</string>
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
+    <!-- App title has to have less than 50 characters. If you cannot squeeze it, just remove a part of it -->
+    <string name="app_title">Simple App Launcher - Find your apps quickly</string>
     <!-- Short description has to have less than 80 chars -->
     <string name="app_short_description">Een eenvoudige launcher voor je favoriete apps.</string>
     <string name="app_long_description">
