--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -20,6 +20,8 @@
     <string name="thank_you">Ďakujem</string>
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
+    <!-- App title has to have less than 50 characters. If you cannot squeeze it, just remove a part of it -->
+    <string name="app_title">Jednoduchý spúšťač aplikácií - Nájdite apky rýchlo</string>
     <!-- Short description has to have less than 80 chars -->
     <string name="app_short_description">Jednoduchý držiak pre spúšťačky vašich obľúbených apiek.</string>
     <string name="app_long_description">
