--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -21,9 +21,9 @@
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- App title has to have less than 50 characters. If you cannot squeeze it, just remove a part of it -->
-    <string name="app_title">Simple App Launcher - Find your apps quickly</string>
+    <string name="app_title">Απλός Εκκινητής Εφαρμογών - Άμεση εύρεση εφαρμογών</string>
     <!-- Short description has to have less than 80 chars -->
-    <string name="app_short_description">Μία απλή θήκη για τους αγαπημένους σου Εκκινητές</string>
+    <string name="app_short_description">Μία απλή αποθήκη για τους αγαπημένους σου Εκκινητές</string>
     <string name="app_long_description">
         Μπορείτε εύκολα να προσθέσετε οποιαδήποτε εφαρμογή Εκκίνησης, οπότε δεν θα χρειαστεί ξαναψάξετε μέσα από άσχετες εφαρμογές για να βρείτε αυτήν που χρειάζεστε. Μπορείτε επίσης να μετονομάσετε τους Εκκινητές όπως επιθυμείτε. Δεν είναι ένα πραγματικό πρόγραμμα εκκίνησης που αντικαθιστά την αρχική σας οθόνη, απλά ένα μέρος για τις αγαπημένες σας εφαρμογές. 
 
