--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -15,13 +15,13 @@
     <string name="file_manager">檔案管理器</string>
     <string name="flashlight">手電筒</string>
     <string name="gallery">相簿</string>
-    <string name="music_player">音樂撥放器</string>
+    <string name="music_player">音樂播放器</string>
     <string name="notes">筆記</string>
     <string name="thank_you">Thank You</string>
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- App title has to have less than 50 characters. If you cannot squeeze it, just remove a part of it -->
-    <string name="app_title">Simple App Launcher - Find your apps quickly</string>
+    <string name="app_title">簡易應用程式啟動器 - 快速尋找你的應用程式</string>
     <!-- Short description has to have less than 80 chars -->
     <string name="app_short_description">一個用來開啟你最愛的應用程式的簡易平台。</string>
     <string name="app_long_description">
