--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -1,9 +1,9 @@
 <resources>
     <string name="app_name">Jednoduchý spouštěč aplikací</string>
     <string name="app_launcher_name">Spouštěč aplikací</string>
-    <string name="enter_launcher_name">Prosím zadejte název pro spouštěč</string>
-    <string name="remove_explanation">Tímto se pouze odstraní ikona aplikace z této mřížky, samotná aplikace se neodinstaluje.</string>
-    <string name="close_app">Ukončit tuto aplikaci při spuštění jiné</string>
+    <string name="enter_launcher_name">Prosím, zadejte název spouštěče</string>
+    <string name="remove_explanation">Tímto pouze odeberete ikonu aplikace z mřížky, aplikace samotná zůstane nainstalována.</string>
+    <string name="close_app">Zavřít tuto aplikaci při spuštění jiné</string>
 
     <!-- Apps -->
     <string name="calculator">Kalkulačka</string>
@@ -23,13 +23,13 @@
     <!-- App title has to have less than 50 characters. If you cannot squeeze it, just remove a part of it -->
     <string name="app_title">Jednoduchý spouštěč aplikací</string>
     <!-- Short description has to have less than 80 chars -->
-    <string name="app_short_description">Jednoduchý držák pro spouštění vašich oblíbených aplikací.</string>
+    <string name="app_short_description">Jednoduché místo pro vaše oblíbené aplikace.</string>
     <string name="app_long_description">
-        Můžete jednoduše přidat jakoukoliv aplikaci, už nikdy tak nebudete muset listovat mezi nepotřebnými aplikacemi. Zástupce aplikace můžete i přejmenovat. Nejedná se o skutečný spouštěč pro vaši domovskou obrazovku, pouze držák oblíbených aplikací.
+        Jednoduše přidejte jakoukoliv z vašich aplikací a už nikdy nebudete muset listovat mezi ostatními aplikacemi aby jste našli tu pravou. Zástupce aplikací lze přejmenovávat dle libosti. Tento spouštěč aplikací nenahrazuje vaši domovskou obrazovku, je pouze místem pro vaše oblíbené aplikace.
 
-        Neobsahuje žádné reklamy ani nepotřebná oprávnění. Má otevřený zdrojový kód a možnost změny barev.
+        Neobsahuje žádné reklamy, ani nepotřebná oprávnění. Má plně otevřený zdrojový kód a možnost změny barev.
 
-        Tato aplikace je jen jednou ze sady aplikací. Ostatní si můžete prohlédnout na https://www.simplemobiletools.com
+        Tato aplikace je jen jednou z většího celku aplikací. Ostatní z nich naleznete na https://www.simplemobiletools.com
     </string>
 
     <!--
